@startuml Brinck_Braker

class Ball
class Barrier
class Brick
class Brinck_Braker 
class GraphicsRunner
class Paddle
class StageBuilder
class Object

Brinck_Braker "1" *-- "*" Ball
Brinck_Braker "1" *-- "1" Paddle
Brinck_Braker "1" *-- "*" Brick
Brinck_Braker "1 "*--  "*" Barrier

Brinck_Braker "1" o-- "1" GraphicsRunner
Brinck_Braker "1" o-- "1 +"StageBuilder

Brick --|>  Object
Ball  --|> Object
Paddle --|> Object
Barrier--|> Object
@enduml